# setup

./: .dockerignore  .gitignore  AGENTS.md  Makefile  secrets.gpg
bash-scripts/: add-user.nu  power-draw.sh  up.sh  viz-up.sh
dienpy/: AGENTS.md  CLAUDE.md  pyproject.toml
dienpy/dienpy/: __init__.py  __main__.py  _toml.py  check_versions.py  claude_usage.py  cli.py  commit_nvim_config.py  constants.py  dump_watches.py  gmail.py  ledger.py  nightvid.py  nvim.py  nvim_release_notes.py  random_naming.py  tier.py  upload_to_tmp_s3.py  verify_nvim.py
dienpy/dienpy/ai/: __init__.py  _cache.py  _client.py  commit.py  models.py
dienpy/dienpy/claude/: __init__.py  _auth.py  usage.py
dienpy/dienpy/nvim/: __init__.py  _shared.py
dienpy/dienpy/tts/: __init__.py  _core.py  download.py  server.py  speak.py  voices.py
dienpy/dienpy/versions/: __init__.py  bump.py  check.py  list.py  registry.py  upgrade_system.py
dotfiles/: .bash_aliases  .gitconfig  .profile  .tmux.conf  .vars  .xinitrc  rclone_filter.txt
dotfiles/.claude/: CLAUDE.md
dotfiles/.config/: alacritty.toml  ignore_patterns
dotfiles/.ssh/: costello.pub
extension/: background.js  manifest-v3.json  manifest.json
local-dotfiles/sample/: .local-vars
public-keys/: 24-august-pink
setup/: bootstrap.sh  pyproject.toml  versions.toml
setup-script-testing/: Dockerfile  run-testing
setup/docs/: env.md  levels.md  testing.md
setup/setup/: __main__.py  runner.py  util.py  versions.py
setup/tests/: Dockerfile  test_util.py  (+4 more)
standalones/: file-channel.py  up.sh
util/: service-template  socket-template
(+20 files in other folders)
