[project]
name = "dienpy"
dynamic = ["version", "description"]
dependencies = [
    "requests",
    "rich",
    "tabulate",
    "anthropic>=0.86.0",
    "google-genai>=1.68.0",
]

[project.scripts]
dienpy = "dienpy.__main__:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
