[project]
name = "dienpy"
dynamic = ["version", "description"]
dependencies = [
    "requests",
    "rich",
    "tabulate",
    "anthropic>=0.86.0",
    "google-genai>=1.68.0",
    "setup",
    "kokoro-onnx>=0.5.0",
    "sounddevice>=0.5.5",
]

[project.scripts]
dienpy = "dienpy.__main__:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.uv.sources]
setup = { path = "../setup", editable = true }
